--- a/benchmark/mle-bench/prompt_templates/merge_user_prompt.j2
+++ b/benchmark/mle-bench/prompt_templates/merge_user_prompt.j2
@@ -18,6 +18,7 @@ Your goal is to achieve the best possible score on the machine learning task des
 
 # Current Workspace Structure
 The following is the current directory structure of the workspace. Use this to locate data files and understand where to save outputs.
+Note: This tree is up-to-date. You can rely on it for file locations.
 {{ directory_tree }}
 
 # Execution Environment
